# sel4-build

./: CMakeLists.txt  Kconfig  LICENSE  Makefile  README.md  newapp.sh
apps/: CMakeLists.txt
configs/: all_x86_defconfig
libs/: CMakeLists.txt
libs/libsel4/: CMakeLists.txt
tools/kbuild/kconfig/: CMakeLists.txt
